--- a/src/components/css/Header.module.css
+++ b/src/components/css/Header.module.css
@@ -2,8 +2,13 @@
     height: 100vh;
 }
 
+.logo {
+    font-size: 24px;
+}
+
 .container {
     display: flex;
+    margin: 1em;
 }
 
 .nav {
@@ -41,16 +46,16 @@
 
 .hamburger {
     position: absolute;
-    top: 0;
-    right:0;
+    top: 1em;
+    right: 1em;
     padding: .25em;
     
 }
 
 .hamburgerLine {
     background-color: #fff;
-    height: 3px;
-    width: 20px;
+    height: 8px;
+    width: 40px;
     margin: .5em;
     transition: transform .5s ease-out;
 }
@@ -65,13 +70,15 @@
 
 .payoff {
     position: absolute;
-    bottom: 25px;
+    bottom: 100px;
     font-size: 64px;
     overflow: hidden;
     width: 100%;
 }
 
 .payoff p {
+
+    text-shadow: 2px 2px 2px rgb(121, 118, 105);
       /* animation properties */
   -moz-transform: translateX(100%);
   -webkit-transform: translateX(100%);
