--- a/src/components/css/Manifesto.module.css
+++ b/src/components/css/Manifesto.module.css
@@ -1,7 +1,9 @@
+
 .container p {
     line-height: 2;
     font-size: 42px;
 }
+
 .container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -37,3 +39,6 @@
     margin: 125px 100px 0;
 }
 
+.margin {
+    margin: 0 2em;
+}
