--- a/src/components/css/Manifesto.module.css
+++ b/src/components/css/Manifesto.module.css
@@ -36,7 +36,7 @@
 .textLeftTop {
     line-height: 3;
     font-size: 64px;
-    margin: 50px 20px 0;
+    margin: 140px 50px 20px 0;
 }
 
 .margin {
