--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -18,3 +18,18 @@ h1 {
   margin: 22px 0;
   text-align: center;
 }
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: transparent;
+  border: 1.5px solid #616161;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #616161;
+  border: 2px solid #616161;
+  border-radius: 5px;
+}
