--- a/src/components/css/Biographies.module.css
+++ b/src/components/css/Biographies.module.css
@@ -9,7 +9,7 @@
     height: 100vh;
     overflow: hidden;
     background-size: cover;
-    background-position: top;
+    background-position: center center;
 }
 
 .containerBio {
@@ -47,3 +47,32 @@
     bottom: 0;
     width: inherit;
 }
+
+.textWrap::-webkit-scrollbar {
+    height: 20px;
+    width: 20px;
+  }
+  
+.textWrap::-webkit-scrollbar-track {
+    background-color: transparent;
+    border: 1px solid transparent;
+    height: 5px;
+    -webkit-background-clip: content-box;
+    background-clip: content-box;
+  }
+  
+.textWrap::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border: 1px solid transparent;
+    background-position:center center;
+    background-repeat: no-repeat;
+    background-size: 15px;
+  }
+
+.arrow::-webkit-scrollbar-thumb {
+    background-image: url("../images/arrow.png");
+  }
+
+ .check::-webkit-scrollbar-thumb {
+    background-image: url("../images/arrow.png");
+  }
