--- a/src/components/css/Contacts.module.css
+++ b/src/components/css/Contacts.module.css
@@ -8,3 +8,11 @@
     line-height: 2;
     margin: 1em 0;
 }
+
+@media only screen and (min-width: 1025px) {
+    .container p {
+        font-size: 38px;
+        margin: 2em 0;
+    }
+
+  }
