--- a/src/components/css/Header.module.css
+++ b/src/components/css/Header.module.css
@@ -4,6 +4,7 @@
 
 .logo {
     font-size: 24px;
+    margin: 0 !important;
 }
 
 .container {
@@ -17,10 +18,9 @@
     height: 0;
     overflow: hidden;
     text-align: center;
-    transition: height .5s ease-out;
+    transition: height 2s ease-out;
     z-index: 1;
     position: relative;
-
     background-color: rgb(76, 74, 68);
 }
 
@@ -68,7 +68,6 @@
     top: 1em;
     right: 1em;
     padding: .25em;
-    
 }
 
 .hamburgerLine {
@@ -76,15 +75,15 @@
     height: 8px;
     width: 40px;
     margin: .5em;
-    transition: transform .5s ease-out;
+    transition: transform 2s ease-out;
 }
 
 .cross1 {
-    transform: rotate(-45deg) translateX(-9px);
+    transform: rotate(-225deg) translateX(12px);
 }
 
 .cross2 {
-    transform: rotate(45deg) translateX(-7px);
+    transform: rotate(225deg) translateX(10px);
 }
 
 .payoff {
@@ -95,18 +94,20 @@
     width: 100%;
 }
 
-.payoff p {
+.payoff ul {
+    list-style: none;
+}
 
+.payoff li {
+    width: -moz-fit-content;
+    width: fit-content;
+}
+
+.payoff p {
+    display: inline;
     opacity: 0;
     margin: 0 20px;
-    /* 
-    text-shadow: 2px 2px 2px rgb(121, 118, 105);
-      
-  -moz-transform: translateX(100%);
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
-  */
-    
+
 }
 
 .p1 {
@@ -143,4 +144,100 @@
   @keyframes header-animation {
     from { opacity: 0; }
     to { opacity: 1; }
+  }
+
+  @media only screen and (min-width: 1025px) {
+    .header {
+        height: 100vh;
+    }
+    
+    .container {
+        align-items: center;
+        height: 150px;
+    }
+
+    .logo {
+        font-size: 8vw;
+    }
+
+    .hamburger {
+        top: 2em;
+        right: 1.5em;
+        padding: .5em;
+    }
+    
+    .hamburgerLine {
+        height: 16px;
+        width: 80px;
+        margin: 1em;
+    }
+
+    .cross1 {
+        transform: rotate(-225deg) translateX(22px);
+    }
+    
+    .cross2 {
+        transform: rotate(225deg) translateX(22px);
+    }
+
+    .nav.open {
+        height: 550px;
+        max-height: 550px;
+    }
+
+    .nav span {
+        display: inline-block;
+        font-size: 42px;
+        transform: translateY(-36px);
+        margin: 0 24px;
+    }
+    
+    .nav button {
+        font-size: 62px;
+    }
+    
+    .nav li {
+        margin: 20px;
+        padding: 20px;
+    }
+
+    .payoff {
+        font-size: 15vw;
+    }
+  }
+
+  @media only screen and (min-width: 1251px) {
+    
+    .logo {
+        font-size: 5vw;
+    }
+
+    .nav.open {
+        height: 80px;
+        max-height: 80px;
+    }
+    
+    .nav ul {
+        display: flex;
+        justify-content: center;
+    }
+
+    .nav li {
+        margin: 10px 20px;
+        padding: 5px 20px;
+    }
+
+    .nav span {
+        font-size: 32px;
+        transform: translateY(-24px);
+        margin: 0 12px;
+    }
+
+    .nav button {
+        font-size: 48px;
+    }
+    
+    .payoff {
+        font-size: 5vw;
+    }
   }
