--- a/src/components/css/Manifesto.module.css
+++ b/src/components/css/Manifesto.module.css
@@ -1,5 +1,5 @@
 h1 {
-    margin: 0 20px;
+    margin: 1em 20px;
 }
 
 .container p {
@@ -53,7 +53,7 @@ h1 {
     background-color: #fff;
     width: 1px;
     height: 350px;
-    margin: -150px calc(100% - 2em);
+    margin: -80px calc(100% - 4em);
 }
 
 .textLeft {
