--- a/src/components/css/Services.module.css
+++ b/src/components/css/Services.module.css
@@ -24,3 +24,38 @@
     font-size: 24px;
     line-height: 2;
 }
+
+@media only screen and (min-width: 1025px) {
+    
+    .serviceListTitle {
+        font-size: 68px;
+        margin: 1em 0;
+    }
+
+    .serviceList p {
+        font-size: 48px;
+        line-height: 3;
+    }
+    
+  }
+
+  @media only screen and (min-width: 1251px) {
+    
+    .container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 20px;
+    }
+
+    .serviceListTitle {
+        font-size: 48px;
+        margin: 1em 0;
+        text-align: center;
+    }
+
+    .serviceList p {
+        font-size: 24px;
+        line-height: 2;
+    }
+
+  }
