--- a/src/components/css/Biographies.module.css
+++ b/src/components/css/Biographies.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 2em 0;
+    margin: 0;
 }
 
 .backgroundImage {
@@ -32,7 +32,7 @@
 .bioWrap p {
     width: 80%;
     margin: 0 10%;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 1.5;
     text-wrap: balance;
     position: absolute;
@@ -51,7 +51,7 @@
     }
     
     .bioWrap p {
-        font-size: 42px;
+        font-size: 22px;
     }
 
   }
