--- a/src/components/css/Biographies.module.css
+++ b/src/components/css/Biographies.module.css
@@ -1,69 +1,77 @@
 .container {
-    margin: 0;
+    margin: 1em 20px;
+}
+
+.bio {
+  margin: 0 30px;
+}
+
+.container h2, .container p, .container a {
+  text-align: left;
+  margin: 0;
+}
+
+.container p {
+  margin-top: 2em;
+}
+
+.container a {
+  border: none;
+  text-decoration: none;
+  background-color: transparent;
+  color: #fff;
+  max-width: 100px;
+  transition: background-color 1s;
+  transition: color .5s;
+}
+
+.container a:hover {
+  color: #b4b3b3;
+  text-decoration: underline;
 }
 
 .backgroundImage {
-    top: 0;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    background-size: cover;
-    background-position: top/center center;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  margin-top: 100px;
 }
-
-.containerBio {
-    overflow: auto;
-}
-
-.bioWrap {
-    line-height: 1.5;
-    display: inline-block;
-    width: 75%;
-    height: inherit;
-}
-
-.bioWrap h2 {
-    width: 80%;
-    margin: 0 10%;
-    font-size: 42px;
-}
-
-.bioWrap p {
-    width: 80%;
-    margin: 0 10%;
-    font-size: 18px;
-    line-height: 1.5;
-    text-wrap: balance;
-    position: absolute;
-    bottom: 0;
-}
-
-.textWrap::-webkit-scrollbar {
-    height: 40px;
-  }
-  
 
   @media only screen and (min-width: 1025px) {
-    
-    .bioWrap h2 {
-        font-size: 12vw;
-    }
-    
-    .bioWrap p {
-        font-size: 22px;
+
+    .backgroundImage {
+      height: 1000px;
+      background-size: contain;
     }
 
   }
 
   @media only screen and (min-width: 1251px) {
-    
-    .bioWrap h2 {
-        font-size: 5vw;
+
+    .container {
+      display: flex;
+      margin-top: 200px;
     }
-    
-    .bioWrap p {
-        font-size: 22px;
+
+    h2 {
+      font-size: 64px;
+    }
+
+    p, a {
+      font-size: 38px;
+    }
+
+    .container div {
+      width: 50%;
+    }
+
+    .backgroundImage {
+      height: 1000px;
+      background-size: cover;
+      background-position: top center;
+      margin-top: 0;
     }
 
   }
