--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -1,7 +1,3 @@
-html, body {
-  overflow-x: hidden;
-}
-
 .App {
   background-color: rgb(76, 74, 68);
 }
@@ -15,9 +11,15 @@ html, body {
 
 a, button {
   cursor: pointer;
+  color: #ed4f47;
+}
+
+h2 {
+  color: #ed4f47;
 }
 
 h1 {
+  color: #ed4f47;
   font-size: 13vw;
   margin: 1em 20px;
   text-align: center;
@@ -25,6 +27,10 @@ h1 {
 
 html::-webkit-scrollbar {
   width: 10px;
+}
+
+html::-webkit-scrollbar:horizontal {
+  height: 0;
 }
 
 html::-webkit-scrollbar-track {
