--- a/src/components/css/Services.module.css
+++ b/src/components/css/Services.module.css
@@ -21,8 +21,16 @@
 }
 
 .serviceList p {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 2;
+}
+
+.serviceList .mail {
+    margin-top: 10px;
+    font-weight: 800;
+    font-size: 20px;
+    text-decoration: none;
+    word-break: break-all;
 }
 
 @media only screen and (min-width: 1025px) {
