--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -35,11 +35,11 @@ html::-webkit-scrollbar:horizontal {
 
 html::-webkit-scrollbar-track {
   background-color: transparent;
-  border: 1.5px solid #616161;
+  border: 1.5px solid transparent;
 }
 
 html::-webkit-scrollbar-thumb {
-  background-color: #616161;
-  border: 2px solid #616161;
+  background-color: #ed4f47;
+  border: 2px solid #ed4f47;
   border-radius: 5px;
 }
