--- a/src/components/css/Header.module.css
+++ b/src/components/css/Header.module.css
@@ -89,7 +89,7 @@
 .payoff {
     position: absolute;
     bottom: 100px;
-    font-size: 64px;
+    font-size: 42px;
     overflow: hidden;
     width: 100%;
     text-transform: uppercase;
@@ -208,6 +208,13 @@
         bottom: 50px;
     }
 
+  }
+
+  @media only screen and (min-width: 1025px) {
+    
+    .payoff p {
+        font-size: 64px;
+    }
   }
 
   @media only screen and (min-width: 1251px) {
