--- a/src/components/css/Manifesto.module.css
+++ b/src/components/css/Manifesto.module.css
@@ -134,6 +134,10 @@ h1 {
     font-size: 78px;
 }
 
+.hidden {
+    display: none;
+}
+
 @media only screen and (min-width: 1025px) {
 
     .lineTop {
