--- a/src/css/Manifesto.module.css
+++ b/src/css/Manifesto.module.css
@@ -4,7 +4,7 @@ h1 {
 
 .container p {
     line-height: 2;
-    font-size: 42px;
+    font-size: 28px;
 }
 
 .container {
@@ -140,6 +140,11 @@ h1 {
 
 @media only screen and (min-width: 1025px) {
 
+    .container p {
+        line-height: 2;
+        font-size: 42px;
+    }
+    
     .lineTop {
         top: calc(100vh - 50px);
     }
