--- a/src/css/Services.module.css
+++ b/src/css/Services.module.css
@@ -3,6 +3,12 @@
     margin: 0 2em;
 }
 
+p {
+    font-size: 24px;
+    line-height: 2;
+    margin-bottom: 3em
+}
+
 .wrapVideo {
     width: 100%;
 }
@@ -33,8 +39,15 @@
     word-break: break-all;
 }
 
+
+
 @media only screen and (min-width: 1025px) {
     
+    .imageResize {
+        width: 50%;
+        margin: auto;
+     }
+     
     .serviceListTitle {
         font-size: 68px;
         margin: 1em 0;
@@ -50,20 +63,10 @@
   @media only screen and (min-width: 1251px) {
     
     .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 20px;
+        display: block;
+        margin: 0 2em;
     }
 
-    .serviceListTitle {
-        font-size: 32px;
-        margin: 1em 0;
-        text-align: left;
-    }
-
-    .serviceList p {
-        font-size: 24px;
-        line-height: 2;
-    }
+    
 
   }
